--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.21",
     "parser": "^0.1.4"
